<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragRequestPlayersMainTitle"
        android:id="@+id/lane_request_players_textView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/darkGray"/>

    <EditText
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/playersNumBox"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/players_cancel_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="handleClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/player_submit_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="handleClick"
            android:nestedScrollingEnabled="false" />
    </LinearLayout>

</LinearLayout>