<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.seclass.gobowl.CustomerActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/tvCustomerMainTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvCustomerMainTitle"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="ID:" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/darkGray"
                android:gravity="right"
                android:id="@+id/tvCustomerId" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Email:" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/darkGray"
                android:gravity="right"
                android:id="@+id/tvCustomerEmail"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="VIP:" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/darkGray"
                android:gravity="right"
                android:id="@+id/tvCustomerVipStatus"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal">
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/darkGray"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Active Game:" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/custActiveGameTextViewNo"
                android:textColor="@color/darkGray"
                android:gravity="right"
                android:id="@+id/active_game_customer_text_set" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Lanes:" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="None"
                android:textColor="@color/darkGray"
                android:gravity="right"
                android:id="@+id/customer_lanes_text_view" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_horizontal|bottom">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Check Out"
                android:id="@+id/buttonCheckOut"
                android:onClick="handleClick" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Request Lane"
                android:id="@+id/buttonRequestLane"
                android:onClick="handleClick" />

        </LinearLayout>

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_container_customer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="fill"
            android:background="#ffffff" />

    </LinearLayout>

</RelativeLayout>