<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scan Card"
        android:id="@+id/qr_scanner_button"
        android:layout_gravity="center_horizontal"
        android:onClick="handleClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Waiting for player 1 to scan card."
        android:id="@+id/qr_text"
        android:layout_gravity="center_horizontal" />
</LinearLayout>